--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,18 @@
-body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-        'Droid Sans', 'Helvetica Neue', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
+:root {
+    --color: #333;
+    --spacing: 10px;
+    --spacing2: calc(var(--spacing) * 2);
 
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+    --palette-primary-main: #3f51b5;
+    --palette-primary-contrastText: #fff;
+    --palette-info-main: #2196f3;
+    --palette-info-dark: #1976d2;
+    --palette-success-main: #4caf50;
+    --palette-success-dark: #388e3c;
+    --palette-warning-main: #ff9800;
+    --palette-warning-dark: #f57c00;
+
+    --shape-borderRadius: 4px;
+
+    --shadow: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 1px 5px 0px rgba(0,0,0,0.12);
 }
